--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -202,5 +202,6 @@ shop-pay-button {
 nav > * {
   display: flex;
   align-items: center;
-  margin: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
