--- a/src/styles/custom-font.css
+++ b/src/styles/custom-font.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost&family=Lobster+Two&display=swap');
+
+
+
+
 @font-face {
   font-family: 'IBMPlexSerif';
   font-display: swap;
@@ -11,3 +16,6 @@
   font-style: italic;
   src: url('/fonts/IBMPlexSerif-TextItalic.woff2') format('woff2');
 }
+
+
+
